js262/test/language/statements/if/if-gen-else-stmt.js


/*---
description: Generator declaration not allowed in statement position
esid: sec-if-statement
es6id: 13.6
negative:
  phase: parse
  type: SyntaxError
features: [generators]
---*/

$DONOTEVALUATE();

if (true) function* g() {  } else ;
